# claw-observer

./: .claudeignore  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  debug_sse.py  pyproject.toml  开发计划.md  需求描述.txt
.claude/: settings.local.json
cli/: __init__.py  config.py  main.py  tunnel.py  ui_renderer.py  ws_client.py
deploy/: Dockerfile.sidecar  docker-compose.yml
deploy/systemd/: sidecar-monitor.service
sidecar/: __init__.py  config.py  log_reader.py  main.py  parser.py  state_machine.py  ws_server.py
sidecar/rules/: base.py  openclaw_v1.py
tests/: test_parser_rules.py  test_state_machine.py
tests/samples/: openclaw_logs.txt
